+ used fire for bare bones cli to install + used rich for text formatting + tomli to be used for accessing .toml + added some utility code to install Scoop , log msgs and check reqs + added pyproject.toml  with all deps and dev-deps + added bare-bones readme.md

--- a/config.toml
+++ b/config.toml
@@ -64,3 +64,8 @@ extension = [
     "VisualStudioExptTeam.intellicode-api-usage-examples",
     "VisualStudioExptTeam.vscodeintellicode"
     ]
+
+[conda]
+
+[conda.setup]
+py_version = "^3.10.0"
